@@ -1,3 +1,14 @@
+2004-01-07  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* sha1-el.el (sha1-string-external): Make it can return a string
+	in binary form.
+	(sha1-region-external): Ditto.
+	(sha1-string-internal): Ditto.
+	(sha1-region-internal): Ditto.
+	(sha1-region): Ditto.
+	(sha1-string): Ditto.
+	(sha1): Ditto.
+
 2003-12-16  Simon Josefsson  <jas@extundo.com>
 
 	* sha1-el.el (autoload): Don't use ignore-errors.
